# ttd-fastapi-docker-course

./: pyproject.toml
project/: Dockerfile
project/app/: config.py
