[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Elise Pitel <elise.pitel@wefox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.1"
uvicorn = "0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
asyncpg = "^0.25.0"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
